text search API almost complete
